Adding military experience

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Work Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Military & education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Technical Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">My Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">My Awards</a></li>
                 </ul>
             </div>
         </nav>
@@ -137,6 +137,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Military Experience</h3>
+                            <div class="subheading mb-3">Operation Enduring Freedom</div>
+                            <div class="subheading mb-3">Florida Army National Guard</div>
+                             <p><li><span data-contrast="none">Mechanized Infantryman</span></li>
+                                <li><span data-contrast="auto">Configured and maintained all customer AD accounts for SharePoint users.</span></li>
+                                <li><span data-contrast="none">Overseeing migration of on-prem data to cloud platforms (Azure, hybrid).</span></li>
+                                <li><span data-contrast="none">Created PowerShell scripts for installing and configuration of SharePoint 2010 and SharePoint 2013.</span></li>
+                                <li><span data-contrast="auto">Responsible for installation, configuration, and backup of SQL and SQL databases for SharePoint use.</span></li>
+                                <li><span data-contrast="auto">Performed over ~20 SharePoint upgrades from 2007 to 2010 or from 2010 to 2013. </span></li></p>.</span></li>
+                                <li><span data-contrast="auto">Configured and maintained all customer AD accounts for SharePoint users.</span></li>
+                                <li><span data-contrast="none">Overseeing migration of on-prem data to cloud platforms (Azure, hybrid).</span></li>
+                                <li><span data-contrast="none">Created PowerShell scripts for installing and configuration of SharePoint 2010 and SharePoint 2013.</span></li>
+                                <li><span data-contrast="auto">Responsible for installation, configuration, and backup of SQL and SQL databases for SharePoint use.</span></li>
+                                <li><span data-contrast="auto">Performed over ~20 SharePoint upgrades from 2007 to 2010 or from 2010 to 2013. </span></li></p>
                             <h3 class="mb-0">Keiser University</h3>
                             <div class="subheading mb-3">Associate of Arts</div>
                             <div>Criminal Justice</div>
@@ -233,7 +247,8 @@
                         </tr>
                         </tbody>
                         </table>
-                   <!-- <div class="subheading mb-3">Programming Languages & Tools</div>
+                   <!-- 
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -267,10 +282,11 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
-                </div>
+                </div><Interests
+            -->
             </section>
-            <hr class="m-0" /> -->
-            <!-- Interests-->
+             <hr class="m-0" /> 
+            
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
